<?xml version="1.0"?>
<package>
  <name>patrol_filter</name>
  <version>0.0.1</version>
  <description>The patrol_filter package</description>
  <maintainer email="raulpl25@gmail.com">Raul Peralta-Lozada</maintainer>
  <license>MIT</license>
  <author email="raulpl25@gmail.com">Raul Peralta-Lozada</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>filters</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>filters</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
